# resto_app

./: .env  .gitignore  Cargo.toml  Dockerfile  Readme.md  build_run_container.sh  curl_cmd_for_simulation  diesel.toml  set_env_var_for_local_run.sh
docker/: docker-compose.yml  init.sql
migrations/2021-11-14-130352_create_db_tables/: down.sql  up.sql
src/: db.rs  logger.rs  main.rs  models.rs  routes.rs  schema.rs
