[package]
name = "resto_app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Env var mgmt
dotenv = "0.15.0"

# for serilize/deserialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# time stamp handling
chrono = { version = "0.4", features = ["serde"] }

# logging
log = "0.4"
fern = "0.6"

# DB query ORM
diesel = { version = "1.4", features = ["postgres", "chrono"] }

# Enable enum in diesel using 3rd party lib integration
diesel-derive-enum = { version = "1.1", features = ["postgres"] }